client/src/css/registerCreative.css
.register-creative-body {
  width: 100%;
  height: 100%;
  display: flex;
  flex-grow: 1;
  align-items: center;
}
.creative-image-container {
  position: relative;
  width: 33.3%;
  height: 100%;
  background-image: url('../images/register-user-img-3-export.jpg');
  background-size: cover;
  background-position: bottom;
  animation: saturation-transform 20s ease-in-out infinite;
}
@keyframes saturation-transform {
  0% {
    filter: saturate(0.9) brightness(0.9);
  }
  50% {
    filter: saturate(0.7) brightness(0.8);
  }
  100% {
    filter: saturate(0.9) brightness(0.9);
  }
}
.creative-image-container-2 {
  position: absolute;
  width: 100%;
  height: 100%;
  background-image: url('../images/register-user-img-3-export-dark-sky.png');
  background-size: cover;
  background-position: bottom;
  animation: opacity-transform 20s ease-in-out infinite;
}
@keyframes opacity-transform {
  0% {
    opacity: 0.2;
  }
  50% {
    opacity: 0.8;
  }
  100% {
    opacity: 0.2;
  }
}
.image-lightning-1 {
  position: absolute;
  width: 100%;
  height: 100%;
  background-image: url('../images/lightning-1.png');
  background-size: cover;
  background-position: bottom;
  clip-path: polygon(75% 0%, 0% 0%, 0% 100%, 100% 100%);
  animation: lightning-1 20s ease-in-out infinite;
  opacity: 0;
}
@keyframes lightning-1 {
  0% {
    opacity: 0;
  }
  44% {
    opacity: 0;
  }
  45% {
    opacity: 0.1;
  }
  46% {
    opacity: 0.8;
  }
  48% {
    opacity: 0.5;
  }
  50% {
    opacity: 0.8;
  }
  52% {
    opacity: 0.5;
  }
  54% {
    opacity: 0.8;
  }
  56% {
    opacity: 0.1;
  }
  57% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}
.image-lightning-2 {
  position: absolute;
  width: 100%;
  height: 100%;
  background-image: url('../images/lightning-2.png');
  background-size: cover;
  background-position: bottom;
  clip-path: polygon(75% 0%, 0% 0%, 0% 100%, 100% 100%);
  animation: lightning-2 20s ease-in-out infinite;
  opacity: 0;
}
@keyframes lightning-2 {
  0% {
    opacity: 0;
  }
  46% {
    opacity: 0;
  }
  55% {
    opacity: 0.1;
  }
  56% {
    opacity: 0.8;
  }
  57% {
    opacity: 0.5;
  }
  58% {
    opacity: 1;
  }
  59% {
    opacity: 0.5;
  }
  60% {
    opacity: 1;
  }
  61% {
    opacity: 0.1;
  }
  62% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}
.image-lightning-3 {
  position: absolute;
  width: 100%;
  height: 100%;
  background-image: url('../images/lightning-3.png');
  background-size: cover;
  background-position: bottom;
  clip-path: polygon(75% 0%, 0% 0%, 0% 100%, 100% 100%);
  animation: lightning-3 20s ease-in-out infinite;
  opacity: 0;
}
@keyframes lightning-3 {
  0% {
    opacity: 0;
  }
  58% {
    opacity: 0;
  }
  59% {
    opacity: 0.1;
  }
  60% {
    opacity: 0.8;
  }
  61% {
    opacity: 0.5;
  }
  62% {
    opacity: 1;
  }
  64% {
    opacity: 1;
  }
  65% {
    opacity: 0.1;
  }
  66% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}
.background-image {
  height: 100%;
  width: 100%;
}
.register-container {
  width: 66.6%;
  height: 100%;
  display: flex;
  flex-direction: column;
}
.input-container {
  width: 50%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.creative-form-container {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 60px;
}
.register-icon {
  margin-right: 15px;
  width: 40px;
}
.creative-headline {
  width: 100%;
  display: flex;
  justify-content: center;
  color: #606a6c;
  margin: 60px 0px;
}
.select-categories-label {
  width: 280px;
  color: #606a6c;
  margin-bottom: 5px;
}
.select-categories-label-2 {
  width: 280px;
  color: #a8a8a8;
  font-size: 9pt;
  margin-bottom: 20px;
}
.creative-input-text {
  width: 280px;
  height: 25px;
  border-radius: 5px;
  padding-left: 5px;
  margin-bottom: 10px;
  border: 1px solid #cacaca;
  color: #707070;
}
::-webkit-input-placeholder {
  /* Chrome/Opera/Safari */
  color: #a8a8a8;
}
.creative-required-label {
  width: 280px;
  padding-right: 5px;
  text-align: right;
  margin-bottom: 10px;
  font-size: 9pt;
  color: #a8a8a8;
}
.creative-checkbox-container-outer {
  display: flex;
  flex-direction: column;
  width: 280px;
}
.checkbox-container-inner {
  width: 280px;
  height: 40px;
  display: flex;
  align-items: center;
  margin-bottom: 5px;
}
.input-checkbox {
  width: 15px;
  height: 15px;
}
.checkbox-label {
  color: #606a6c;
  font-size: 11pt;
  margin-left: 12px;
}
.checkbox-label-2 {
  color: #a5a5a5;
  font-size: 9pt;
  margin: 5px 0px 0px 12px;
}
.available-container {
  margin: 30px 0px;
  width: 280px;
  height: 40px;
  display: flex;
  align-items: center;
}
.checkbox-label-available {
  color: #606a6c;
  font-size: 11pt;
  margin-left: 12px;
}
#align-items-top {
  align-items: flex-start;
}
.creative-line {
  width: 280px;
  height: 1px;
  background-color: #9ba1a2;
  margin: 8px 0px;
}
.creative-line-long {
  width: 440px;
  height: 1px;
  background-color: #9ba1a2;
  margin: 8px 0px;
}
.data-input-container {
  width: 100%;
  height: 100%;
  display: flex;
}
.avatar-container {
  display: flex;
  flex-direction: column;
  width: 280px;
  height: 70px;
  margin: 18px 0px;
  justify-content: space-between;
}
.avatar-container-left {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 80px;
  width: 175px;
}
.upload-avatar {
  color: #606a6c;
  font-size: 11pt;
  width: 100%;
  height: 25px;
  display: flex;
  align-items: center;
}
.user-icon {
  height: 44px;
  width: 44px;
  margin-right: 10px;
  clip-path: circle(22px at center);
}
.choose-file {
  width: 100%;
  height: 20px;
  color: #606a6c;
}
.error-message {
  position: absolute;
  bottom: 50px;
  left: 0;
  color: #ee2b2b;
  font-size: 10pt;
  height: 20px;
  line-height: 20px;
  width: 100%;
  animation: flash-transition 1s ease-in-out infinite;
}
@keyframes flash-transition {
  0% {
    color: #a72929;
  }
  50% {
    color: #ff0000;
  }
  100% {
    color: #a72929;
  }
}
.creative-register-button {
  width: 280px;
  height: 40px;
  border-radius: 10px;
  border-style: none;
  background-color: #606a6c;
  color: #fefefe;
  font-size: 14pt;
  cursor: pointer;
  margin-top: 20px;
}
.categories-container {
  width: 50%;
  height: 100%;
  display: flex;
  flex-direction: column;
}
.select-category-frame {
  width: 440px;
  height: 180px;
  background-color: #e1e1e1;
  border-radius: 5px;
}
.select-category-container {
  width: 440px;
  height: 180px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-around;
  box-shadow: 5px 5px 10px 0px #d2d2d2;
}
.category-button {
  width: 200px;
  height: 40px;
  background-color: #c4c4c4;
  border-radius: 5px;
  outline: none;
  border: none;
}
.social-media-container {
  display: flex;
  flex-direction: column;
  justify-content: baseline;
  width: 280px;
  height: 140px;
  padding: 15px 0px;
}
.social-media-icons-container {
  position: relative;
  width: 280px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 10px 0px;
}
.social-media-text {
  color: #606a6c;
  width: 280px;
  margin-bottom: 10px;
}
.social-media-button {
  height: 25px;
  border-radius: 50%;
  border-style: none;
  background-color: #ffffff00;
  outline: none;
  cursor: pointer;
}
.social-media-button:hover {
  animation: social-media-button-hover-animation 1s infinite ease-in-out reverse;
}
@keyframes social-media-button-hover-animation {
  0% {
    background-color: #0ad82e;
    box-shadow: 0px 0px 15px 10px #0ad82e;
  }
  50% {
    background-color: #0ad82e;
    box-shadow: 0px 0px 15px 14px #0ad82e;
  }
  100% {
    background-color: #0ad82e;
    box-shadow: 0px 0px 15px 10px #0ad82e;
  }
}
.social-media-icon {
  width: 25px;
  height: 25px;
}
.social-media-input {
  position: absolute;
  bottom: 0;
  width: 280px;
  height: 2px;
  border-radius: 5px;
  padding-left: 5px;
  margin-bottom: 12px;
  border: 1px solid #cacaca;
  color: #707070;
}
.social-media-input-animation {
  animation: input-grow-horizontal 1s ease-in-out 1 forwards;
}
@keyframes input-grow-horizontal {
  0% {
    height: 2px;
  }
  100% {
    height: 25px;
  }
}

